# $Id: Makefile.am 2007 2009-07-02 14:46:17Z afarris $
SUBDIRS = ANSITime BinUtils CivilTime CommonTime DayTime GPSWeekSecond GPSWeekZcount IonoModel JulianDate Matrix MJD MSC PolyFit PowerSum RACRotation RinexEphemerisStore RinexMet RinexNav RinexObs RungeKutta4 SEM Stats TimeConverters UnixTime Vector YDSTime Yuma
